# CSC-485B

./: .gitignore  CMakeLists.txt  compare.py  kernal.cu
demo/: bitanicSort.cu
demo/binaryBitanic/: CMakeLists.txt  bitanicSort.cu
demo/newBitanic/: bitanicSort.cu
include/: algorithm_choices.h
src/: cpu_baseline.cu  gpu_solution.cu  main.cu
